--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Odin recipes</title>
+</head>
+<body>
+   <h1>Indian Dinner Recipes</h1>
+   <img src='images/indian-dinner-recipes-swasthis.jpg' alt="" style="width:800px;height:450px;">
+        <h3 id='image label'>A collection of recipes from pop culture!</h3>
+        <div>
+            <ul>
+                <li><a href='./recipes/shahi-paneer.html'>Shahi Paneer</a></li>
+                <li><a href="./recipes/mixed-veg.html">Mixed Veg.</a></li>
+            </ul>
+        </div>
+   <a href="Index.html">Recipe Title</a>
+</body>
+</html>
